// Vitest Snapshot v1

exports[`snapshot 1`] = `
{
  "this": {
    "is": Set {
      "of",
      "snapshot",
    },
  },
}
`;

exports[`snapshot with big array 1`] = `
{
  "this": {
    "is": Set {
      "one",
      [
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
      ],
    },
  },
}
`;

exports[`snapshot with big string 1`] = `
{
  "this": {
    "is": Set {
      "one",
      "zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo",
    },
  },
}
`;

exports[`throwing snapshots 1`] = `"omega"`;

exports[`throwing snapshots 2`] = `"omega"`;

exports[`throwing snapshots 3`] = `
{
  "error": "omega",
}
`;
